[build-system]
build-backend = "uv_build"
requires = [
  "uv-build (~=0.7.17)",
]


[project]
name = "trialsynth"
version = "0.1.0a0"
description = "Extracts clinical trial information from sources"
authors = [
  { name = "Tomo Oga", email = "oga.t@northeastern.edu" },
  { name = "Jim Sheldon", email = "5619539+jim-sheldon@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "addict (~=2.4)",
  "bioregistry (~=0.11.6)",
  "click (~=8.1)",
  "gilda (~=1.1)",
  "indra @ git+https://github.com/sorgerlab/indra.git",
  "numpy (~=1.26)",  # https://github.com/allenai/scispacy/issues/536
  "overrides (~=7.7)",
  "pandas (~=2.2)",
  "pydantic (~=2.7)",
  "requests (~=2.31)",
  "scispacy (~=0.5.5)",
  "spacy (~=3.7)",  # https://github.com/allenai/scispacy/blob/v0.5.5/setup.py#L44
  "tqdm (~=4.66)",
]


[dependency-groups]
test = [
  "pytest (~=8.1)",
]
